# SalutaryDuplicity

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-18-sbm-explorer-notebook-design.md
notebooks/: 01_exploration.ipynb  sbm_explorer.ipynb
src/salutary_duplicity/: __init__.py  dashboard_data.py  model.py  networks.py  sweeps.py
src/salutary_duplicity/figstyles/: __init__.py  palette.py  style.py
